# HomeWork_6_main

./: .README.md.swn  .README.md.swo  .README.md.swp  README.md  category.json  groups.json  product.json  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_remove_blogpost_published_blogpost_is_published.py  0003_blogpost_slug.py  0004_remove_blogpost_slug.py
blog/templates/blog/: base.html  blog_contact.html  blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html
blog/templates/includes/: inc_menu.html
blog/templatetags/: blog_tags.py
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_product.py  plus_product.py
catalog/migrations/: 0001_initial.py  0002_alter_product_purchase_price.py  0003_alter_product_purchase_price.py  0004_alter_product_options_product_publication_status.py  0005_alter_product_options_product_owner_and_more.py  0006_alter_product_options.py
catalog/templates/: base.html  contacts.html  home.html  product_details.html  products_list.html
catalog/templates/catalog/: categories_list.html  contacts.html  home.html  product_delete.html  product_detail.html  product_form.html  product_list.html  products_by_category.html
catalog/templates/includes/: inc_menu.html
config/: settings.py  urls.py
users/: models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/: login.html
users/templates/users/: user_form.html
