[tool.poetry]
name = "vitaliy-avdoshkin-homework-6"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
psycopg2 = "^2.9.10"
python-dotenv = "^1.0.1"
black = "^24.10.0"
pillow = "^11.0.0"
flake8 = "^7.1.1"
ipython = "^8.29.0"


[tool.poetry.group.lint.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
